--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
                 My Family Book
             </h1>
 
-            <img src="https://static.tvtropes.org/pmwiki/pub/images/eddsworld_main.PNG" id="Edd's_family_member_image" width="150px" height="200px">
-            <h4 id="Edd's_family_member_name"></h4>
-            <button onclick="update();">Next</button>
-            
-            <button onclick="update();">back</button>  
+            <img src="https://i.postimg.cc/MKdhy06Z/family.jpg" id="family_member_image" width="150px" height="200px">
+            <h4 id="family_member_name"></h4>
+            <button>onclick="update();"Next<button>
+           <!-- Debug the above code to create a button with onclick functionality as given below-->
+            <!-- <button onclick="update();">Next</button>  -->
           
         </center>
 
         <script src="main.js"></script>
-
     </body>
 </html>
